# M-AIDA

./: .gitignore  .zenodo.json  AI_USE_DISCLOSURE.md  AUTHORS  AUTHORS_AND_OWNERSHIP.md  CHANGELOG.md  CITATION.cff  COMMERCIAL-LICENSE.md  DATA_DICTIONARY.md  DEPLOY.md  HUONG_DAN_TIENG_VIET.docx  IP_REGISTER.md  LICENSE  M-AIDA_7.2_SPEC.md  PUBLISHING.md  README.md  REPRODUCIBILITY_MANIFEST.json  THIRD_PARTY_LICENSES.md  VALIDATION_PROTOCOL.md  VISION_8_0.md  asia-atlas.html  asia-bookchapter.html  asia-cd1.html  asia-cd2.html  asia-maida-paper.html  asia-p1.html  asia-p10.html  asia-p2.html  asia-p3.html  asia-p4.html  asia-p5.html  asia-p6.html  asia-p7.html  asia-p8.html  asia-p9.html  asia.html  bizarena.html  commercial.html  data_melody.html  docker-compose.prod.yml  (+8 more)
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/workflows/: ci.yml  deploy-ghcr.yml  pages.yml
assets/: asia.css  asia.js  gate.js  mini-guide.js  mini-music.js
assets/data/: site-metrics.json
backend/: .env.example  .env.production.example  Dockerfile  engines.py  extractor.py  main.py  models.py  notion_sync.py  pyproject.toml  requirements.txt  settings.py
backend/tests/: test_712_governance.py  test_effect_size_conversions.py  test_engine_injection.py
demo/: HUONG_DAN_BAO_VE.md  demo_seed.csv  run_defense.py  ui.html
docs/: commercial.html  index.html
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
scripts/: check_site_metrics.py
(+13 files in other folders)
